WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21859
control rendering bugs on windows when not using SAFARI_THEME
https://bugs.webkit.org/show_bug.cgi?id=21859
Summary
control rendering bugs on windows when not using SAFARI_THEME
Tony Chang
Reported
2008-10-24 12:57:24 PDT
1) Checkboxes marked readonly are rendered different from other checkboxes (there's no such thing as a readonly checkbox, it should render the same) 2) If a button has focus and is pressed, it is rendered as focused rather than pressed. patch coming up
Attachments
fix control layout
(2.17 KB, patch)
2008-10-24 12:58 PDT
,
Tony Chang
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2008-10-24 12:58:00 PDT
Created
attachment 24646
[details]
fix control layout
Dave Hyatt
Comment 2
2008-10-24 13:21:07 PDT
Comment on
attachment 24646
[details]
fix control layout r=me
Timothy Hatcher
Comment 3
2008-10-30 22:49:45 PDT
Landed in
r38025
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug