        Fix 2 Windows theme bugs:         1) Checkboxes marked readonly were rendered incorrectly         2) If a button has focus and is pressed, it was rendered            as focused rather than pressed.

https://bugs.webkit.org/show_bug.cgi?id=21859

        Reviewed by Dave Hyatt.

        * rendering/RenderThemeWin.cpp:
        (WebCore::RenderThemeWin::determineState):
        (WebCore::RenderThemeWin::determineButtonState):

Canonical link: https://commits.webkit.org/30243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38025 268f45cc-cd09-0410-ab3c-d52691b4dbfc